@@ -11,7 +11,7 @@ ScaleDiscrete <- proto(Scale, expr={
     
     b_and_l <- check_breaks_and_labels(breaks, labels)
     
-    .$proto(name=name, .input=variable, .output=variable, .expand = expand, .labels = labels, limits = b_and_l$limits, breaks = b_and_l$breaks, formatter = formatter, drop = drop, legend = legend)
+    .$proto(name=name, .input=variable, .output=variable, .expand = expand, .labels = b_and_l$labels, limits = limits, breaks = b_and_l$breaks, formatter = formatter, drop = drop, legend = legend)
   }
 
   # Range -------------------
@@ -44,6 +44,7 @@ ScaleDiscrete <- proto(Scale, expr={
   # have been set
   train_df <- function(., df, drop = FALSE) {
     if (empty(df)) return() 
+    if (!is.null(.$limits)) return()
     
     input <- .$input_aesthetics(df)
     l_ply(input, function(var) .$train(df[[var]], drop))
