@@ -18,3 +18,4 @@ ggplot2 0.8.5 (2009-XX-XX) ----------------------------------------
 * scales: all scales now have legend parameter, which defaults to TRUE.  
   Setting to false will prevent that scale from contributing to the legends.
   (Implements #27)
+* xlim, ylim: fix bug when setting limits of discrete scales
